--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,12 @@
   <head>
     <title>Automation POC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/bower_components/angular.treeview/css/angular.treeview.css">
   </head>
   <body>
     <div class="container" ng-controller="AutomationPocCtrl">
-      <div class="row">
+      <div class="row panel">
         <form ng-submit="connect()">
           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
             <div class="form-group">
@@ -28,23 +29,33 @@
           </div>
         </form>
       </div>
-      <div class="row">
+      <div class="row panel">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <table class="table table-striped table-bordered">
             <thead>
               <tr>
-                <th class="span7">IP</th>
-                <th class="span7">Port</th>
-                <th class="span7">Status</th>
-                <th class="span7"></th>
+                <th>IP</th>
+                <th>Port</th>
+                <th>Status</th>
+                <th>Propriedades</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
               <tr ng-repeat="connection in connections">
-                <td class="span7">{{connection.ip}}</td>
-                <td class="span7">{{connection.port}}</td>
-                <td class="span7">{{connection.status}}</td>
-                <td class="span7"><button class="btn btn-primary" ng-click="disconnect(connection)" ng-disabled="connection.status != 'conectado'">Desconectar</button></td>
+                <td>{{connection.ip}}</td>
+                <td>{{connection.port}}</td>
+                <td>{{connection.status}}</td>
+                <td>
+                  <div
+                    data-angular-treeview="true"
+                    data-tree-model="roleList"
+                    data-node-id="roleId"
+                    data-node-label="roleName"
+                    data-node-children="children" >
+                  </div>
+                </td>
+                <td><button class="btn btn-primary" ng-click="disconnect(connection)" ng-disabled="connection.status != 'conectado'">Desconectar</button></td>
               </tr>
             </tbody>
           </table>
@@ -67,10 +78,10 @@
         </div>
       </div>
     </div>
-    <script src="/bower_components/socket.io-client/socket.io.js"></script>
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/bower_components/angular/angular.min.js"></script>
-    <script src="index.js"></script>
+    <script type="text/javascript" src="/bower_components/socket.io-client/socket.io.js"></script>
+    <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="/bower_components/angular.treeview/angular.treeview.js"></script>
   </body>
 </html>
