--- a/client/index.html
+++ b/client/index.html
@@ -1,87 +1,87 @@
 <!doctype html>
 <html lang="en" ng-app="poc">
-  <head>
-    <title>Automation POC</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/bower_components/angular.treeview/css/angular.treeview.css">
-  </head>
-  <body>
-    <div class="container" ng-controller="AutomationPocCtrl">
-      <div class="row panel">
-        <form ng-submit="connect()">
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-            <div class="form-group">
-              <label>IP:</label>
-              <input type="text" class="span6" ng-model="ip" placeholder="IP">
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-            <div class="form-group">
-              <label>Port:</label>
-              <input type="text" class="span6" ng-model="port" placeholder="Port">
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-            <div class="form-group">
-              <input type="submit" class="span1 btn btn-primary" value="Conectar" ng-disabled="!ip || !port">
-            </div>
-          </div>
-        </form>
-      </div>
-      <div class="row panel">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <table class="table table-striped table-bordered">
-            <thead>
-              <tr>
-                <th>IP</th>
-                <th>Port</th>
-                <th>Status</th>
-                <th>Propriedades</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-repeat="connection in connections">
-                <td>{{connection.ip}}</td>
-                <td>{{connection.port}}</td>
-                <td>{{connection.status}}</td>
-                <td>
-                  <div
-                    data-angular-treeview="true"
-                    data-tree-model="roleList"
-                    data-node-id="roleId"
-                    data-node-label="roleName"
-                    data-node-children="children" >
-                  </div>
-                </td>
-                <td><button class="btn btn-primary" ng-click="disconnect(connection)" ng-disabled="connection.status != 'conectado'">Desconectar</button></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="span9">
-          <table class="table table-striped table-bordered">
-            <thead>
-              <tr>
-                <th class="span7">Text</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-repeat="msg in messages">
-                <td class="span7">{{msg}}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <script type="text/javascript" src="/bower_components/socket.io-client/socket.io.js"></script>
-    <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="/bower_components/angular.treeview/angular.treeview.js"></script>
-  </body>
+	<head>
+		<title>Automation POC</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/bower_components/angular.treeview/css/angular.treeview.css">
+	</head>
+	<body>
+		<div class="container" ng-controller="AutomationPocCtrl">
+			<div class="row panel">
+				<form ng-submit="connect()">
+					<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+						<div class="form-group">
+							<label>IP:</label>
+							<input type="text" class="span6" ng-model="ip" placeholder="IP">
+						</div>
+					</div>
+					<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+						<div class="form-group">
+							<label>Port:</label>
+							<input type="text" class="span6" ng-model="port" placeholder="Port">
+						</div>
+					</div>
+					<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+						<div class="form-group">
+							<input type="submit" class="span1 btn btn-primary" value="Conectar" ng-disabled="!ip || !port">
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="row panel">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					<table class="table table-striped table-bordered">
+						<thead>
+							<tr>
+								<th>IP</th>
+								<th>Port</th>
+								<th>Status</th>
+								<th>Propriedades</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="connection in connections">
+								<td>{{connection.ip}}</td>
+								<td>{{connection.port}}</td>
+								<td>{{connection.status}}</td>
+								<td>
+									<div
+										data-angular-treeview="true"
+										data-tree-model="connection.tree"
+										data-node-id="nodeId"
+										data-node-label="nodeName"
+										data-node-children="children" >
+									</div>
+								</td>
+								<td><button class="btn btn-primary" ng-click="disconnect(connection)" ng-disabled="connection.status != 'conectado'">Desconectar</button></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+				<div class="span9">
+					<table class="table table-striped table-bordered">
+						<thead>
+							<tr>
+								<th class="span7">Text</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="msg in messages">
+								<td class="span7">{{msg}}</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript" src="/bower_components/socket.io-client/socket.io.js"></script>
+		<script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
+		<script type="text/javascript" src="/bower_components/angular.treeview/angular.treeview.js"></script>
+	</body>
 </html>
