--- a/client/index.html
+++ b/client/index.html
@@ -83,5 +83,6 @@
 		<script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="/bower_components/angular.treeview/angular.treeview.js"></script>
+		<script type="text/javascript" src="/index.js"></script>
 	</body>
 </html>
